<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- Licensed to the Apache Software Foundation (ASF) under one or more 
        contributor license agreements. See the NOTICE file distributed with this 
        work for additional information regarding copyright ownership. The ASF licenses 
        this file to You under the Apache License, Version 2.0 (the "License"); you 
        may not use this file except in compliance with the License. You may obtain 
        a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless 
        required by applicable law or agreed to in writing, software distributed 
        under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
        OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
        the specific language governing permissions and limitations under the License. -->

    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.agentlab</groupId>
    <artifactId>karaf-rest</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Apache Karaf :: AgentLab :: REST</name>
    <packaging>pom</packaging>

    <modules>
        <module>karaf-rest-api</module>
        <module>karaf-rest-features</module>
        <module>karaf-rest-whiteboard</module>
        <module>ru.agentlab.jwt.service</module>
        <module>ru.agentlab.oauth</module>
        <module>ru.agentlab.oauth.commons</module>
    </modules>

    <properties>
        <jackson.version>2.9.4</jackson.version>
        <maven-bundle-plugin.version>2.5.4</maven-bundle-plugin.version>
        <osgi.version>6.0.0</osgi.version>
        <felix.plugin.version>4.1.0</felix.plugin.version>
        <servicemix-spec.version>2.9.0</servicemix-spec.version>
        <jackson.version>2.10.2</jackson.version>
        <jose4j.version>0.7.0</jose4j.version>
        <apache.commons-lang3.version>3.9</apache.commons-lang3.version>
        <guava.version>23.0</guava.version>
        <apache.httpclient.version>4.5.11</apache.httpclient.version>
        <apache.httpcore.version>4.4.13</apache.httpcore.version>
        <nimbus-jose-jwt.version>8.5.1</nimbus-jose-jwt.version>
        <tink.version>1.2.2</tink.version>
        <jcip-annotations.version>1.0</jcip-annotations.version>
        <json-smart.version>2.3</json-smart.version>
        <accessors-smart.version>1.2</accessors-smart.version>
        <net.minidev.asm.version>1.0.2</net.minidev.asm.version>
        <org.ow2.asm.asm.version>5.0.4</org.ow2.asm.asm.version>
        <oauth2-oidc-sdk.version>6.23</oauth2-oidc-sdk.version>
        <com.nimbusds.lang-tag.version>1.4.4</com.nimbusds.lang-tag.version>
        <javax.mail-api.version>1.6.2</javax.mail-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>${felix.plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>org.bitbucket.b_c</groupId>
                <artifactId>jose4j</artifactId>
                <version>${jose4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache.commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${apache.httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>${apache.httpcore.version}</version>
            </dependency>

            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus-jose-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink</artifactId>
                <version>${tink.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jcip</groupId>
                <artifactId>jcip-annotations</artifactId>
                <version>${jcip-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>json-smart</artifactId>
                <version>${json-smart.version}</version>
            </dependency>
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>accessors-smart</artifactId>
                <version>${accessors-smart.version}</version>
            </dependency>
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>asm</artifactId>
                <version>${net.minidev.asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${org.ow2.asm.asm.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>oauth2-oidc-sdk</artifactId>
                <classifier>jdk8</classifier>
                <version>${oauth2-oidc-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>lang-tag</artifactId>
                <version>${com.nimbusds.lang-tag.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>javax.mail-api</artifactId>
                <version>${javax.mail-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <maxmem>256M</maxmem>
                    <fork>${compiler.fork}</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.3.9,4)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[1.8,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>${felix.plugin.version}</version>
                <inherited>true</inherited>
                <extensions>true</extensions>
                <configuration>
                    <obrRepository>NONE</obrRepository>
                    <instructions>
                        <nsh_interface>org.apache.aries.blueprint.NamespaceHandler</nsh_interface>
                        <nsh_namespace>osgi.service.blueprint.namespace</nsh_namespace>
                        <_removeheaders>Private-Package,Include-Resource,Embed-Dependency,Created-By,Bnd-LastModified,Built-By,Tool</_removeheaders>
                        <_versionpolicy>${bnd.version.policy}</_versionpolicy>
                        <Bundle-DocURL>http://karaf.apache.org/</Bundle-DocURL>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
